Minor fix in code for tree

--- a/CC1.ipynb
+++ b/CC1.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
     "        self.letter = letter\n",
     "        \n",
     "    def __repr__(self):\n",
-    "        return repr(self.letter)"
+    "        return str(self.letter)"
    ]
   },
   {
@@ -311,16 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3 * (('a' + 'b') * 'c'))"
+       "(3 * ((a + b) * c))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
