--- a/CC1.ipynb
+++ b/CC1.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,10 +172,10 @@
     "    return (pow(x, 300, size) + 2) % size\n",
     "    \n",
     "def insert(x):\n",
-    "    table[H(x) % size].append(x)\n",
+    "    table[H(x)].append(x)\n",
     "\n",
     "def search(x):\n",
-    "    return x in table[H(x) % size]\n",
+    "    return x in table[H(x)]\n",
     "\n",
     "# Une fonction pour montrer les cases non-vides de la table\n",
     "def show():\n",
@@ -195,45 +195,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 [-839]\n",
-      "101 [-164, 983, -132]\n",
-      "226 [68]\n",
-      "673 [987, -631, 511, 919]\n",
-      "1791 [-334, 743, -882, -743]\n",
-      "2209 [-565, -72]\n",
-      "2300 [-266, -687]\n",
-      "2376 [789, 789, -410]\n",
-      "2400 [-140]\n",
-      "2500 [-88, 481, -243]\n",
-      "2891 [824, 342, 595, 342, -191]\n",
-      "3573 [90, -808, 374, -901, -374]\n",
-      "4698 [807, -560, -527]\n",
-      "5098 [-22]\n",
-      "5254 [-911, 782, 282, -154, 782]\n",
-      "5650 [399, 796]\n",
-      "6996 [751, -611, -482, 914, 695, 691]\n",
-      "7025 [-540, -806, 421]\n",
-      "7305 [418, 868, -699, 903, -51]\n",
-      "7628 [-886, 660, -173]\n",
-      "7727 [-599, 142, 733]\n",
-      "7826 [-793, 580, -398, -21]\n",
-      "8132 [758, -293, 587]\n",
-      "8785 [554, 278]\n",
-      "8796 [-624, -379]\n",
-      "9221 [-47]\n",
-      "9239 [-152, -606, 606, 606]\n",
-      "9460 [87, 257, -80, -388, -792]\n",
-      "9680 [-768, -869]\n",
-      "9681 [-201, 390, 994, -322, 269]\n",
-      "9682 [-59, 492, -797, 305]\n",
-      "9803 [372, 7, 424]\n"
+      "3 [-182, -1000]\n",
+      "101 [-37, -247, 23, 864]\n",
+      "673 [-286, -511, 635, 539, 960, -556]\n",
+      "1791 [-811, -811]\n",
+      "2209 [684, -265, 989]\n",
+      "2300 [585, -704, 704]\n",
+      "2376 [357, 718, 650, 830, -795, -718]\n",
+      "2400 [-352, 14]\n",
+      "2500 [243]\n",
+      "2891 [-36, -928]\n",
+      "4698 [738, 527]\n",
+      "5098 [533, -356]\n",
+      "5254 [-165, -617, 146, 282]\n",
+      "5650 [341, -341, 103, -543, -341]\n",
+      "6996 [-854, 761, -898, -207, 751]\n",
+      "7025 [-770, 43]\n",
+      "7305 [106, -288, 858, -712]\n",
+      "7628 [245, -815, -344, 616, 716, -355]\n",
+      "7727 [494, 107, -52, -799]\n",
+      "7826 [58, 656, 58]\n",
+      "8132 [933, -623, -270, -608]\n",
+      "8785 [143]\n",
+      "8796 [934, -379, 823, 561]\n",
+      "9221 [-753]\n",
+      "9239 [467, -583]\n",
+      "9456 [982, -34, -314]\n",
+      "9460 [-866, -978, -118]\n",
+      "9680 [537, -438, 846, 768, 508]\n",
+      "9681 [-477, 246, -409, -547, 517, -887]\n",
+      "9682 [-147, 69, 954]\n"
      ]
     }
    ],
