--- a/CC1.ipynb
+++ b/CC1.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "- Combien de comparaisons effectue l'algorithme, en termes de la longueur $n$ de la liste en entrée, au pire cas?\n",
     "- Combien de comparaisons dans le meilleur cas?\n",
-    "- Combien d'écritures dans la variable `liste`, en termes de la longueur $m$?\n",
+    "- Combien d'écritures dans la variable `liste`, en termes de la longueur $n$?\n",
     "\n",
     "Répondre ci-dessous."
    ]
