Typos and better solution

--- a/CC1-solution.ipynb
+++ b/CC1-solution.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "- Combien de comparaisons effectue l'algorithme, en termes de la longueur $n$ de la liste en entrée, au pire cas?\n",
     "\n",
-    "  *Le nombre de comparaisons dépend uniquement de $n$, et non pas du contenu de la liste. Il est évident qu'à la première itération on fait $n$ comparaisons, ensuite $n-1$, etc., pour un total de $(n^2+1)/2 ∈ O(n^2)$ comparaisons. Avec une petite modification aux bornes de la deuxième boucle, l'algorithme reste correcte et fait $n$ comparaisons en moins, ce qui ne change pas l'asymptotique.*\n",
+    "  *Le nombre de comparaisons dépend uniquement de $n$, et non pas du contenu de la liste. Il est évident qu'à la première itération on fait $n$ comparaisons, ensuite $n-1$, etc., pour un total de $n(n+1)/2 ∈ O(n^2)$ comparaisons. Avec une petite modification aux bornes de la deuxième boucle, l'algorithme reste correct et fait $n$ comparaisons en moins, ce qui ne change pas l'asymptotique.*\n",
     "\n",
     "- Combien de comparaisons dans le meilleur cas? *Tout est dans la réponse précédente*\n",
     "\n",
@@ -182,7 +182,7 @@
    "source": [
     "- Quelle est la complexité de l'algorithme, en termes de la longueur $n$ de la liste en entrée?\n",
     "\n",
-    "  *Notons $M(n)$ la complexité de l'algorithme, alors $M(n) ≈ 2M(n/2) + c$ pour une constante $c$, et $M(1)=d$ pour une autre constante $d$. En déroulant la récurrence, on obtient $M(n) = c + 2c + 4c + \\cdots + nd$, et on peut borner la somme géométrique par $2^{\\lceil\\log_2 n\\rceil c}$, donc $M(n) ∈ O(n)$.*"
+    "  *Notons $M(n)$ la complexité de l'algorithme, alors $M(n) ≈ 2M(n/2) + c$ pour une constante $c$, et $M(1)=d$ pour une autre constante $d$. En déroulant la récurrence, on obtient $M(n) = c + 2c + 4c + \\cdots + nd$, et on peut borner la somme géométrique par $2^{\\lceil\\log_2 n\\rceil} c$, donc $M(n) ∈ O(n)$.*"
    ]
   },
   {
@@ -200,14 +200,29 @@
    "source": [
     "def minimum2(liste):\n",
     "    n = len(liste)\n",
-    "    if n == 2:\n",
-    "        return sorted(liste)\n",
-    "    elif n <= 1:\n",
-    "        return liste[0], liste[0]\n",
+    "    if n == 1:\n",
+    "        return liste\n",
+    "    elif n == 2:\n",
+    "        if liste[0] <= liste[1]:\n",
+    "            return liste\n",
+    "        else:\n",
+    "            return liste[1], liste[0]\n",
     "    else:\n",
-    "        a1, a2 = minimum2(liste[:n//2])\n",
-    "        b1, b2 = minimum2(liste[n//2:])\n",
-    "        return sorted((a1,a2,b1,b2))[:2]"
+    "        a = minimum2(liste[:n//2])  # a peut éventuellement être de longueur 1\n",
+    "        b = minimum2(liste[n//2:])  # mais pas b\n",
+    "        \n",
+    "        # inpsiré par le merge sort\n",
+    "        mins = []\n",
+    "        ai = bi = 0\n",
+    "        while (len(mins) < 2):\n",
+    "            if ai < len(a) and a[ai] < b[bi]:\n",
+    "                mins.append(a[ai])\n",
+    "                ai += 1\n",
+    "            else:\n",
+    "                mins.append(b[bi])\n",
+    "                bi += 1\n",
+    "        \n",
+    "        return mins"
    ]
   },
   {
@@ -218,7 +233,7 @@
     {
      "data": {
       "text/plain": [
-       "[-927, -914]"
+       "[-991, -966]"
       ]
      },
      "execution_count": 9,
@@ -294,37 +309,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 [648, 876, 343, -485]\n",
-      "101 [279, -49, -230]\n",
-      "226 [124, -124, -628]\n",
-      "673 [689, -539, 732]\n",
-      "1791 [-363, 743, 666]\n",
-      "2209 [-643, -11, -11]\n",
-      "2300 [266]\n",
-      "2376 [-865, -83, -83, 830, -357]\n",
-      "2400 [-972]\n",
-      "2500 [-669, 338, 375]\n",
-      "2891 [579]\n",
-      "3573 [-262, -374]\n",
-      "4698 [-609, 289, 803, 609]\n",
-      "5098 [434, -764]\n",
-      "5254 [371]\n",
-      "5650 [103, -187, 399, -956]\n",
-      "6996 [482, -921]\n",
-      "7025 [825, 43]\n",
-      "7305 [-649, -903, 649, -226]\n",
-      "7727 [591, 767, -591, 326, -199, 664, 264]\n",
-      "7826 [284, 935, -478, 536, -214]\n",
-      "8132 [-385, 385, 608, -608]\n",
-      "8785 [-726, 708, -542, -143]\n",
-      "8796 [304, -697, -329, -320, -320]\n",
-      "9221 [-867, 545, 524]\n",
-      "9239 [-852, -588, -514, 583, -642]\n",
-      "9460 [917, 812, -792, -87, 721]\n",
-      "9680 [91, 975, -438, 50]\n",
-      "9681 [518, 19]\n",
-      "9682 [479, 213, -479]\n",
-      "9803 [598, 750]\n"
+      "3 [-195, 516, 161, -229, 938, -100]\n",
+      "101 [-23]\n",
+      "226 [-680]\n",
+      "673 [157, 539, 689, -941, 511, 711]\n",
+      "1791 [363, 913, -913, -743]\n",
+      "2209 [188]\n",
+      "2300 [3, -30, 413]\n",
+      "2376 [986, 564]\n",
+      "2400 [14]\n",
+      "2500 [836, 299, -637]\n",
+      "2891 [940, 595, 999, -634, -971, -501, 336]\n",
+      "3573 [891, 206, -891, 757, -311, -431, 416]\n",
+      "4698 [527]\n",
+      "5098 [-567]\n",
+      "5254 [-108, -325, -953, 617, -256]\n",
+      "5650 [131, 543, 45]\n",
+      "6996 [761, 167, -333, -112]\n",
+      "7025 [-948, 442, -141]\n",
+      "7305 [-288, 903, 510, -288]\n",
+      "7727 [-767, 142, -692, 326, 494, 328]\n",
+      "7826 [-874, 21]\n",
+      "8132 [215, -571]\n",
+      "8785 [366, 278, 189]\n",
+      "8796 [-472, -849, 934]\n",
+      "9239 [-236, -642, -588]\n",
+      "9456 [466, -645]\n",
+      "9460 [717, -722, -294]\n",
+      "9680 [-136]\n",
+      "9681 [295, 994, -269, 390, -390]\n",
+      "9682 [400, 69, 644, -605]\n",
+      "9803 [-394, -372, -75]\n"
      ]
     }
    ],
@@ -341,7 +356,7 @@
    "source": [
     "- Définissez une fonction `max_len` donnant la longueur maximale d'une case de la table;\n",
     "- Définissez une fonction `stats` comptant, pour chaque $n$ entre $0$ et `max_len`, combien de cases contiennent $n$ éléments.\n",
-    "- Modifiez la fonction `H` afin d'avoir une meilleur repartition dans la table de hachage"
+    "- Modifiez la fonction `H` afin d'avoir une meilleure repartition dans la table de hachage"
    ]
   },
   {
@@ -396,7 +411,7 @@
     {
      "data": {
       "text/plain": [
-       "{0: 9870, 4: 7, 3: 8, 1: 4, 5: 5, 2: 6, 7: 1}"
+       "{0: 9870, 6: 3, 1: 7, 4: 4, 3: 9, 2: 4, 7: 2, 5: 2}"
       ]
      },
      "execution_count": 15,
@@ -417,101 +432,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 [-432]\n",
-      "365 [-124]\n",
-      "549 [-791]\n",
-      "916 [-24]\n",
-      "928 [459]\n",
-      "943 [377]\n",
-      "1028 [-577]\n",
-      "1077 [498]\n",
-      "1164 [-599]\n",
-      "1431 [-162]\n",
-      "1493 [949]\n",
-      "1520 [824]\n",
-      "1679 [889]\n",
-      "1762 [937]\n",
-      "1801 [203]\n",
-      "1962 [-453]\n",
-      "2368 [-930, -930]\n",
-      "2379 [12]\n",
-      "2426 [199]\n",
-      "2501 [394]\n",
-      "2717 [846]\n",
-      "2943 [-495]\n",
-      "2994 [-340]\n",
-      "3401 [225]\n",
-      "3445 [767]\n",
-      "3472 [-188]\n",
-      "3476 [538]\n",
-      "3594 [475, 475]\n",
-      "3669 [603]\n",
-      "3693 [-36]\n",
-      "3731 [828]\n",
-      "4078 [556]\n",
-      "4116 [638]\n",
-      "4392 [-48]\n",
+      "328 [-460]\n",
+      "462 [-645]\n",
+      "463 [-52]\n",
+      "469 [-921]\n",
+      "555 [632]\n",
+      "628 [467]\n",
+      "630 [-753]\n",
+      "661 [686]\n",
+      "777 [3, -116]\n",
+      "820 [856]\n",
+      "836 [-186]\n",
+      "863 [946]\n",
+      "893 [896]\n",
+      "1038 [875]\n",
+      "1068 [-373]\n",
+      "1117 [-273]\n",
+      "1260 [-980]\n",
+      "1283 [-284]\n",
+      "1565 [473]\n",
+      "1695 [-455]\n",
+      "1772 [268]\n",
+      "1851 [821]\n",
+      "1971 [765]\n",
+      "1995 [-560]\n",
+      "2002 [305]\n",
+      "2107 [-772]\n",
+      "2183 [-962, -962]\n",
+      "2303 [-304]\n",
+      "2526 [-825]\n",
+      "2614 [105]\n",
+      "2672 [232]\n",
+      "2941 [178]\n",
+      "3084 [665]\n",
+      "3416 [606]\n",
+      "3507 [979]\n",
+      "3572 [487]\n",
+      "3583 [678]\n",
+      "3585 [950]\n",
+      "3680 [958]\n",
+      "3703 [-496]\n",
+      "3715 [-933]\n",
+      "3726 [-734]\n",
+      "3908 [634]\n",
+      "4007 [371]\n",
+      "4191 [905]\n",
+      "4252 [-337]\n",
+      "4380 [660]\n",
+      "4426 [428]\n",
       "4529 [-568]\n",
-      "4572 [-630]\n",
-      "4625 [983]\n",
-      "4635 [609, 609]\n",
-      "4693 [35]\n",
-      "4703 [-279]\n",
-      "4760 [-752]\n",
+      "4635 [609]\n",
       "4761 [117]\n",
-      "4772 [435]\n",
-      "4907 [-469]\n",
-      "5050 [-212]\n",
-      "5125 [-890]\n",
-      "5320 [699]\n",
+      "4939 [166]\n",
+      "5056 [555]\n",
+      "5090 [142]\n",
+      "5384 [-948]\n",
+      "5393 [-76]\n",
       "5397 [-871]\n",
-      "5488 [-918]\n",
-      "5550 [-316, -316]\n",
-      "5576 [-754]\n",
-      "5623 [662]\n",
-      "5646 [-533]\n",
-      "5775 [-74]\n",
-      "5846 [83]\n",
+      "5460 [-332]\n",
+      "5466 [-775]\n",
       "5926 [-329]\n",
-      "5960 [446]\n",
+      "5938 [-153]\n",
+      "6007 [-293]\n",
       "6079 [-360]\n",
-      "6238 [573]\n",
-      "6288 [-245]\n",
-      "6346 [876]\n",
-      "6361 [-443]\n",
-      "6475 [63]\n",
-      "6486 [-471]\n",
-      "6648 [-762]\n",
-      "6726 [-750]\n",
-      "6831 [47]\n",
-      "6942 [785]\n",
-      "7071 [-998, 332]\n",
-      "7082 [-93]\n",
-      "7173 [809]\n",
+      "6167 [778]\n",
+      "6201 [-888]\n",
+      "6238 [-277]\n",
+      "6275 [758]\n",
+      "6295 [-864]\n",
+      "6699 [-494]\n",
+      "6839 [-716]\n",
+      "6872 [241]\n",
+      "6884 [-901]\n",
+      "6901 [854]\n",
+      "6943 [119]\n",
+      "7053 [630]\n",
       "7339 [-769]\n",
-      "7345 [-435]\n",
-      "7509 [-287]\n",
-      "7523 [-37]\n",
-      "7632 [-949]\n",
-      "7808 [-796]\n",
-      "7821 [398]\n",
-      "7914 [-855]\n",
-      "7963 [637]\n",
-      "7999 [627]\n",
-      "8021 [604]\n",
-      "8113 [-984]\n",
-      "8256 [-760]\n",
-      "8287 [-606]\n",
-      "8781 [108]\n",
-      "8942 [-115]\n",
-      "9024 [-319]\n",
-      "9164 [798]\n",
-      "9541 [51]\n",
-      "9625 [-151]\n",
-      "9779 [204]\n",
-      "9811 [-467]\n",
-      "9814 [-756]\n",
-      "9823 [-286]\n"
+      "7439 [752]\n",
+      "7522 [408]\n",
+      "7614 [456]\n",
+      "7620 [163, 163]\n",
+      "7662 [-35]\n",
+      "7786 [-342]\n",
+      "7914 [801]\n",
+      "8467 [-956]\n",
+      "8539 [-708]\n",
+      "8742 [143]\n",
+      "8801 [802]\n",
+      "8804 [578]\n",
+      "8892 [-945]\n",
+      "8950 [-147]\n",
+      "9094 [704]\n",
+      "9113 [-717]\n",
+      "9539 [-105, -105]\n",
+      "9705 [-411, -411]\n",
+      "9841 [-686]\n"
      ]
     }
    ],
@@ -932,7 +947,7 @@
     "  \n",
     "  *La fonction `parse` ne fait qu'une passe linéaire sur la chaîne de caractères, et pour chaque itération de la boucle elle effectue $O(1)$ opérations, elle a donc complexité $O(n)=O(b)$.*\n",
     "  \n",
-    "  *La fonction `permutations` donne en sortie $x$ chaînes de caractères de longueur $n$, sa complexité ne peut donc pas être moindre que $\\Omega(xn)$. Pour déterminer $x$, on remarque qu'à chaque appel récursif la taille de la sortie double, et que le nombre d'appel récursifs est égal au nombre $b$ d'opérations binaires, on a donc une borne inférieure de $\\Omega(2^b n) = \\Omega(2^b b)$.*\n",
+    "  *La fonction `permutations` donne en sortie $x$ chaînes de caractères de longueur $n$, sa complexité ne peut donc pas être moindre que $\\Omega(xn)$. Pour déterminer $x$, on remarque qu'à chaque appel récursif la taille de la sortie double, et que le nombre d'appels récursifs est égal au nombre $b$ d'opérations binaires, on a donc une borne inférieure de $\\Omega(2^b n) = \\Omega(2^b b)$.*\n",
     "  \n",
     "  *On vérifie que la complexité est exactement $\\Theta(2^b b)$: notons $P(B)$ le coût de la fonction `permutation` sur un arbre contenant $B$ operations binaires. Si l'arbre est réduit à une feuille de type `Var`, alors $B=0$ et $P(0)=\\Theta(1)$; sinon $P(B) = 2P(B-1) +c(2^{B-1})^2(B-1)$ pour une constante $c$. En déroulant la récurrence on obtient la borne voulue.*"
    ]
@@ -991,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
