--- a/CC1.ipynb
+++ b/CC1.ipynb
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Voici le résultat après $100$ insertions, chaque case du tableau de hachage est représentée par une liste, la plus part des listes étant vide: `[]`.\n",
+    "Voici le résultat après $100$ insertions, chaque case (non vide) du tableau de hachage est représentée par une liste.\n",
     "\n",
     "- Le nombre moyen de collisions vous parait-il normal ? Comment justifiez-vous ce phenomène ?"
    ]
@@ -248,7 +248,7 @@
    "source": [
     "- Définissez une fonction `max_len` donnant la longueur maximale d'une case de la table;\n",
     "- Définissez une fonction `stats` comptant, pour chaque $n$ entre $0$ et `max_len`, combien de cases contiennent $n$ éléments.\n",
-    "- Modifiez la fonction `H` afin d'avoir une meilleur repartition dans la table de hachage"
+    "- Modifiez la fonction `H` afin d'avoir une meilleure repartition dans la table de hachage"
    ]
   },
   {
