Fixed minor bug in TD5

--- a/TD5.ipynb
+++ b/TD5.ipynb
@@ -76,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "4314334462842797946"
+       "7418075971660019129"
       ]
      },
      "execution_count": 3,
@@ -216,7 +216,7 @@
    "source": [
     "def opt(seq):\n",
     "    if len(seq) <= 2:\n",
-    "        return 0, '(X·X)'\n",
+    "        return 0, 'X'\n",
     "    m = float(\"inf\")  # Valeur spéciale \"infini\" (Python-only)\n",
     "    shape = None\n",
     "    for i in range(1, len(seq)-1):\n",
@@ -238,14 +238,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 157 µs, sys: 30 µs, total: 187 µs\n",
-      "Wall time: 189 µs\n"
+      "CPU times: user 192 µs, sys: 33 µs, total: 225 µs\n",
+      "Wall time: 229 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(2010, '(((X·X)·(X·X))·(((X·X)·(X·X))·((X·X)·(X·X))))')"
+       "(2010, '((X·X)·((X·X)·(X·X)))')"
       ]
      },
      "execution_count": 10,
@@ -297,8 +297,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 106 µs, sys: 0 ns, total: 106 µs\n",
-      "Wall time: 109 µs\n"
+      "CPU times: user 99 µs, sys: 17 µs, total: 116 µs\n",
+      "Wall time: 120 µs\n"
      ]
     },
     {
@@ -340,7 +340,7 @@
     {
      "data": {
       "text/plain": [
-       "[97, 95, 16, 4, 14, 94, 66, 41, 25, 57, 45, 81, 8, 26, 75]"
+       "[50, 22, 63, 35, 75, 78, 67, 2, 84, 73, 29, 3, 53, 64, 97]"
       ]
      },
      "execution_count": 14,
@@ -362,15 +362,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.14 s, sys: 0 ns, total: 1.14 s\n",
-      "Wall time: 1.14 s\n"
+      "CPU times: user 1.42 s, sys: 0 ns, total: 1.42 s\n",
+      "Wall time: 1.42 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(158808,\n",
-       " '(((X·X)·((X·X)·(X·X)))·(((((((((((X·X)·(X·X))·(X·X))·(X·X))·(X·X))·(X·X))·(X·X))·(X·X))·(X·X))·(X·X))·(X·X)))')"
+       "(82674, '((X·(X·(X·(X·(X·(X·X))))))·((((((X·X)·X)·X)·X)·X)·X))')"
       ]
      },
      "execution_count": 15,
@@ -391,14 +390,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 247 µs, sys: 906 µs, total: 1.15 ms\n",
-      "Wall time: 1.16 ms\n"
+      "CPU times: user 1.37 ms, sys: 0 ns, total: 1.37 ms\n",
+      "Wall time: 1.37 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "158808"
+       "82674"
       ]
      },
      "execution_count": 16,
@@ -462,30 +461,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   97      95      16      4       14      94      66      41      25      57      45      81      8       26      75   \n",
+      "   50      22      63      35      75      78      67      2       84      73      29      3       53      64      97   \n",
       "––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––\n",
       "       0       0       0       0       0       0       0       0       0       0       0       0       0       0    \n",
-      "         147440   6080    896     5264   86856   254364  67650   58425   64125   207765  29160   16848   15600  \n",
-      "             42940   11400   11280   30080   124740  222750  161700  110250  155250  49680   38520   64200  \n",
-      "                 48372   47064   34304   40904   139090  356700  206025  238275  61080   61536   71760  \n",
-      "                     84676   61240   43528   45004   159040  392625  356550  69280   66280   99480  \n",
-      "                         98628   62564   46604   50704   194950  568350  90928   77808   91680  \n",
-      "                             99752   60584   54352   60964   245980  140560  104656  109480 \n",
-      "                                 97644   78444   63844   75544   151088  160112  146128 \n",
-      "                                     115760  84144   80728   78136   154000  212560 \n",
-      "                                         121364  112404  78648   78968   175088 \n",
-      "                                             149912  87256   80632   86768  \n",
-      "                                                 124180  94928   91568  \n",
-      "                                                     131996  121348 \n",
-      "                                                         158808 \n",
-      "CPU times: user 1.05 ms, sys: 0 ns, total: 1.05 ms\n",
-      "Wall time: 916 µs\n"
+      "         69300   48510   165375  204750  391950  10452   11256   12264   177828   6351    4611   10176   329024 \n",
+      "             87010   106260  376740  387660  22152   23556   22046   16498   24747   17958   15744   28800  \n",
+      "                 188760  234960  535395  27402   34752   34104   20384   16672   38103   30543   37239  \n",
+      "                     320760  349932  31812   33282   45366   31474   17074   16990   51051   56394  \n",
+      "                         423632  34584   42396   44776   43000   27592   24092   23774   77991  \n",
+      "                             36784   38280   53274   45930   39274   35710   32350   36190  \n",
+      "                                 45184   50060   51964   44284   47092   44210   49188  \n",
+      "                                     56348   52358   48862   48102   55526   61774  \n",
+      "                                         56182   51388   55480   55656   72892  \n",
+      "                                             53756   53906   63650   70382  \n",
+      "                                                 59074   61174   80224  \n",
+      "                                                     66958   75042  \n",
+      "                                                         82674  \n",
+      "CPU times: user 0 ns, sys: 1.14 ms, total: 1.14 ms\n",
+      "Wall time: 922 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "158808"
+       "82674"
       ]
      },
      "execution_count": 18,
@@ -513,16 +512,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12 ms, sys: 0 ns, total: 12 ms\n",
-      "Wall time: 11.9 ms\n",
-      "CPU times: user 1.94 ms, sys: 0 ns, total: 1.94 ms\n",
-      "Wall time: 1.95 ms\n"
+      "CPU times: user 10.5 ms, sys: 4.17 ms, total: 14.7 ms\n",
+      "Wall time: 14.4 ms\n",
+      "CPU times: user 2.57 ms, sys: 0 ns, total: 2.57 ms\n",
+      "Wall time: 2.57 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "462044"
+       "364080"
       ]
      },
      "execution_count": 19,
